# agentic-career-application

./: .gitignore  .mcp.json  CHANGELOG.md  PLANNING.md  README.md  WORKFLOW.md  env.example  pyproject.toml
.claude/: launch.json  settings.json
.claude/skills/: career-planning  cover-letter-writing  linkedin-content  resume-writing  scoring-rubrics
alembic/: env.py
alembic/versions/: 122fa6101515_initial_schema.py  a1b2c3d4e5f6_savedjob_decision_log.py  b2c3d4e5f6a7_linkedin_profile_cache.py  c3d4e5f6a7b8_linkedin_metrics_tables.py  d4e5f6a7b8c9_interview_prep.py
src/api/: config.py  db.py  main.py
src/api/agents/: __init__.py  graph.py  state.py  tools.py
src/api/models/: __init__.py  cover_letter.py  interview_prep.py  job.py  linkedin.py  linkedin_metrics.py  panel.py  pipeline.py  profile.py  resume.py
src/api/routers/: cover_letter.py  dashboard.py  fit.py  interview_prep.py  jobs.py  linkedin.py  linkedin_metrics.py  panel.py  pipeline.py  profiles.py  resume.py  retro.py
src/api/services/: adzuna.py  anthropic.py  jsearch.py  linkedin.py  linkedin_scraper.py  rag.py  resume_engine.py
src/mcp_server/: __main__.py  server.py
src/mcp_server/tools/: read.py  vault.py  write.py
src/web/: package-lock.json  package.json
src/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/web/app/(app)/: layout.tsx
src/web/app/(app)/analyze/: page.tsx
src/web/app/(app)/dashboard/: page.tsx
src/web/app/(app)/feed/: page.tsx
src/web/app/(app)/letters/: page.tsx
src/web/app/(app)/linkedin/: page.tsx
src/web/components/ui/: badge.tsx  card.tsx  profile-icons.tsx  stat-card.tsx
src/web/lib/: api.ts  profile.ts
src/web/lib/hooks/: use-pipeline.ts  use-profile.ts
src/web/lib/stores/: profile-store.ts
tests/: test_agent_vault_calls.py  test_briefing.py  test_decision_log.py  test_fit.py  test_health.py  test_mcp_read_tools.py  test_mcp_tools.py  test_mcp_write_tools.py  test_writeback.py
(+5 files in other folders)
