[project]
name = "career-command-center"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.21",
    "alembic>=1.13.0",
    "python-multipart>=0.0.9",
    "python-docx>=1.1.0",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.4.0",
    "langgraph>=0.2.0",
    "linkedin-api>=2.3.1",
    "mcp[cli]>=1.2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "pyright>=1.1.380",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
extend-safe-fixes = ["F401"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.File", "fastapi.Form"]

[tool.ruff.lint.isort]
known-first-party = ["api"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
